[package]
name = "plogcat"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
repository = "https://github.com/DoumanAsh/plogcat"
description = "Colorful wrapper over adb logcat"
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
arg = "0.4"

termcolor = "1"
term_size = "0.3"

scope-guard = "1"

[dependencies.time]
version = "0.3"
default-features = false
features = ["local-offset", "parsing", "formatting", "macros"]

[[bin]]
name = "plogcat"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
